--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
+    <h2>test</h2>
     <div class="map-wrapper">
       <div class="map-search">
         <div class="search-engine">
