--- a/index.html
+++ b/index.html
@@ -5,29 +5,53 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css" />
+    <script
+      type="text/javascript"
+      src="https://oapi.map.naver.com/openapi/v3/maps.js?ncpClientId=m3tjx61ua6"
+    ></script>
+    <script src="js/data.js"></script>
+    <!--만약 mapSearch.js에서 data.js에 있는 값을 읽을려고 한다면 다음과 같이 위에 있어야 한다!!!-->
+    <script src="js/mapSearch.js"></script>
   </head>
   <body>
     <h2>test</h2>
     <div class="map-wrapper">
       <div class="map-search">
         <div class="search-engine">
-          <input type="text" />
-          <button>검색</button>
+          <input
+            type="text"
+            value="11"
+            placeholder="지역 또는 도서관명 검색..."
+          />
+          <button class="searchBtn">검색</button>
         </div>
       </div>
       <div id="map" class="map">
         <img src="mapImage/map-detail.png" alt="" />
-        <a href="#">
-          <i class="ri-map-pin-line"></i>
-        </a>
       </div>
-      <div class="map-detail-box">
+
+      <div class="map-detail-box"></div>
+      <div class="detail_wrapper">
         <div class="detail-title"></div>
+        <h2>판교인생</h2>
         <div class="detail-info"></div>
-        <div class="detail-text"></div>
+
+        <div class="detail-text">
+          <div class="text-left">
+            <div class="time">
+              <p>운영시간</p>
+              <p class="week_day">09 : 00 ~ 18 : 00(평일)</p>
+              <p class="week_end">09 : 00 ~ 14 : 00(주말)</p>
+              <p class="holiday">공휴일 휴관</p>
+            </div>
+          </div>
+          <div class="text-right">
+            <div class="time_contents"></div>
+          </div>
+          <div class="tel"></div>
+          <div class="addr"></div>
+        </div>
       </div>
     </div>
-    <script src="js/mapSearch.js"></script>
-    <script src="js/data.js"></script>
   </body>
 </html>
